mobile view completed

--- a/src/app/modules/authentication/authentication.component.html
+++ b/src/app/modules/authentication/authentication.component.html
@@ -1,12 +1,8 @@
-<app-pre-login-header></app-pre-login-header>
-<div class="authentication" fxLayout="column" fxLayoutAlign="center center">
-    <div class="auth-container">
-        <div class="auth-outlet" fxLayout="row" fxLayout.lt-md="column">
-            <div class="router-outlet" fxFlex="100">
-                <router-outlet></router-outlet>
-            </div>
-            <!-- <app-know-more fxFlex="50"></app-know-more> -->
+<div fxLayout="column" fxLayoutAlign="center center" class="mt-4">
+    <img src="assets/images/login-logo.png" class="logo-image"/>
+    <div fxLayout="column">
+        <div fxFlex="100">
+            <router-outlet></router-outlet>
         </div>
-        <app-verticle-slider></app-verticle-slider>
     </div>
 </div>
