--- a/src/app/modules/authentication/authentication.component.scss
+++ b/src/app/modules/authentication/authentication.component.scss
@@ -1,29 +1,7 @@
 @import 'variables';
-.authentication {
-    position: absolute;
-    top: $sweety-header-height;
-    bottom: $sweety-footer-height;
-    overflow-y: auto;
-    background: $sweety-divider-color;
-    z-index: 1;
-    width: 100%;
-    background-image: url('../../../assets/images/login_bg.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    .auth-container {
-        background: $sweety-divider-color;
-        border-radius: 6px;
-        // min-height: 380px;
-        margin: auto;
-        height: auto;
-        width: 50%;
-        .router-outlet {
-            background: $sweety-white;
-            border-left: 5px solid $sweety-primary-color;
-            margin-left: 1px;
-            border-top-left-radius: 6px;
-            border-bottom-left-radius: 6px;
-        }
-    }
+.mt-4{
+    margin-top: 4rem;
+}
+.logo-image{
+    width: 8rem;
 }
