--- a/src/app/modules/dashboard/components/queue-status/queue-status.component.html
+++ b/src/app/modules/dashboard/components/queue-status/queue-status.component.html
@@ -1,18 +1,16 @@
-<div fxLayout="row" fxLayoutGap="1rem" fxLayoutAlign="space-between">
-    <div fxFlex="40">
-        <app-master-container>
-            <ng-container header>Total Payments</ng-container>
-            <ng-container body>
-                <app-sgs-pie-chart [config]="config"></app-sgs-pie-chart>
-            </ng-container>
-        </app-master-container>
-    </div>
-    <div fxFlex="60">
-        <app-master-container>
-            <ng-container header>Payments Overview</ng-container>
-            <ng-container body>
-                <app-sgs-bar-chart *ngIf="barConfig.length" [config]="barConfig"></app-sgs-bar-chart>
-            </ng-container>
-        </app-master-container>
-    </div>
+<div fxLayout="column" fxLayoutGap="1rem" fxLayoutAlign="center">
+    <app-master-container>
+        <ng-container header>Total Payments</ng-container>
+        <ng-container body>
+            <app-sgs-pie-chart [config]="config"></app-sgs-pie-chart>
+        </ng-container>
+    </app-master-container>
+
+    <app-master-container>
+        <ng-container header>Payments Overview</ng-container>
+        <ng-container body>
+            <app-sgs-bar-chart *ngIf="barConfig.length" [config]="barConfig"></app-sgs-bar-chart>
+        </ng-container>
+    </app-master-container>
 </div>
+
