--- a/src/app/modules/home/components/online-food/online-food-add-form/online-food-add-form.component.html
+++ b/src/app/modules/home/components/online-food/online-food-add-form/online-food-add-form.component.html
@@ -158,7 +158,7 @@
         </div>
     </form>  
 </ng-container>
-<!-- <ng-container *ngIf="data.type==='users'">
+<ng-container *ngIf="data.type==='users'">
     <form  [formGroup]="addUserForm" >
         <div  fxLayout="column" fxLayoutGap="0.3rem">
             <div class="disableMe" fxFlex="100"> 
@@ -166,23 +166,7 @@
                     <mat-label>Introduced By</mat-label>
                     <input matInput formControlName="introducedBy" placeholder="Introduced By" />
                 </mat-form-field> 
-            </div>           
-            <mat-form-field  fxFlex="100" *ngIf="data?.data?.currentUserType===2">
-                <mat-label>Scheme Type</mat-label>
-                <mat-select formControlName="scheme_type_id">
-                    <mat-option *ngFor="let schemeType of categories" [value]="schemeType.id" 
-                    (onSelectionChange)="getSubCategoriesByCategory($event,schemeType.id)">{{
-                        schemeType.scheme_type_name
-                    }}</mat-option>
-                </mat-select>
-            </mat-form-field>          
-            <mat-form-field  fxFlex="100" *ngIf="data?.data?.currentUserType===2">
-                <mat-label>Select Scheme</mat-label>
-                <mat-select formControlName="scheme_id">
-                    <mat-option *ngFor="let scheme of subCategories" [value]="scheme.id">
-                    {{scheme.name}}</mat-option>
-                </mat-select>
-            </mat-form-field>
+            </div>     
             <mat-form-field>
                 <mat-label>First Name</mat-label>
                 <input matInput formControlName="firstName" placeholder="First Name" />
@@ -228,7 +212,7 @@
             </div> 
             <mat-error fxFlex="100" *ngIf="addUserForm.controls['mobilePhone']?.errors?.['verifyMobile']">
                 Please verify Mobile Number</mat-error>
-            <div fxLayout="row" fxLayoutGap="1rem">
+            <!-- <div fxLayout="row" fxLayoutGap="1rem">
                 <mat-form-field [fxFlex]="data?.data?.currentUserType===2?50:100">
                     <mat-label>Aadhar Number</mat-label>
                     <input matInput formControlName="aadhar"                     
@@ -279,7 +263,7 @@
                 >
                     Skip for Now
                 </button>
-            </div> 
+            </div>  -->
             <div fxLayout="row">
                 <button
                     class="mat-raised-button mat-primary"
@@ -293,7 +277,7 @@
             </div>            
         </div>
     </form>  
-</ng-container> -->
+</ng-container>
 <ng-container *ngIf="data.type==='payment'">
     <form  [formGroup]="addPaymentForm" >
         <div  fxLayout="column" fxLayoutGap="0.3rem">       
