--- a/src/app/modules/home/components/online-food/online-food-sub-categories/online-food-sub-categories.component.html
+++ b/src/app/modules/home/components/online-food/online-food-sub-categories/online-food-sub-categories.component.html
@@ -1,22 +1,57 @@
 <app-outlet-container>
-    <app-master-container>
-        <ng-container header>Sub Categories</ng-container>
-        <ng-container icons>
-            <mat-form-field>
-                <mat-label>Select Category</mat-label>
-                <mat-select [(ngModel)]="selectedCategory">
-                    <mat-option *ngFor="let category of categories" [value]="category" 
-                    (onSelectionChange)="getSubCategoriesByCategory($event,category)">{{
-                        category.category_name
-                    }}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
-                <i class="las la-file-excel"></i>
-            </button>
-            <button mat-icon-button  (click)="addSubCategory()">
+    <div fxLayout="column" fxFlex="100" >
+        <div fxLayout="row" fxLayoutAlign="space-between" class="heading-title">
+            <div class="title">
+                Add Sub Categories
+            </div>
+            <button mat-icon-button (click)="addSubCategory()">
                 <i class="las la-plus"></i>
             </button>
+        </div>
+        <div fxLayout="row" >            
+            <div class="chips" [class]="this.selectedCategory?.id=== category.id?'active':'inactive'" *ngFor="let category of categories;let i=index;"
+            (click)="getSubCategoriesByCategory($event,category)">
+            <i class="las la-check" *ngIf="this.selectedCategory?.id=== category.id"></i><span>{{
+                category.category_name
+            }}</span>
+            </div>
+        </div>
+        <app-master-container *ngFor="let category of sortedData;let i=index;">
+            <ng-container header>{{category.sub_category_name}}</ng-container>
+            <ng-container body>               
+                <div fxLayout="column" fxLayoutGap="1rem">
+                    <img class="image-preview" [src]="category.url" /> 
+                    <div fxLayout="row" fxLayoutAlign="space-between" class="card-bottom-icons">
+                        <button mat-icon-button (click)="deleteData(category)">
+                            <i class="las la-trash"></i>
+                        </button>
+                        <button mat-icon-button (click)="editData(category)">
+                            <i class="las la-edit"></i>
+                        </button>
+                    </div>
+                </div>
+            </ng-container>
+        </app-master-container> 
+    <!-- <app-master-container>
+        <ng-container header>Sub Categories</ng-container>
+        <ng-container icons>
+            <div fxLayout="row" fxLayoutGap="1rem">
+                <mat-form-field>
+                    <mat-label>Select Category</mat-label>
+                    <mat-select [(ngModel)]="selectedCategory">
+                        <mat-option *ngFor="let category of categories" [value]="category" 
+                        (onSelectionChange)="getSubCategoriesByCategory($event,category)">{{
+                            category.category_name
+                        }}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button mat-icon-button  *ngIf="sortedData.length>0"   (click)="downloadExcel()">
+                    <i class="las la-file-excel"></i>
+                </button>
+                <button mat-icon-button  (click)="addSubCategory()">
+                    <i class="las la-plus"></i>
+                </button>
+            </div>
         </ng-container>
         <ng-container body>
             <app-sgs-table
@@ -25,5 +60,6 @@
             (_clickCell)="onClickCell($event)"
         ></app-sgs-table>
         </ng-container>
-    </app-master-container>    
+    </app-master-container>  -->
+    </div>   
 </app-outlet-container>
