--- a/src/app/sgs-components/master-container/master-container.component.scss
+++ b/src/app/sgs-components/master-container/master-container.component.scss
@@ -2,6 +2,8 @@
 .master-container {
     background: white;
     border-radius: 0.5rem;
+    margin-left: 0.4rem;
+    margin-right: 0.4rem;
     .panel-header {
         display: flex;
         align-items: center;
@@ -30,8 +32,8 @@
             gap: 0.5rem;
         }
         .title {
-            font-size: 1rem;
-            font-weight: 700;
+            font-size: 0.8rem;
+            font-weight: bold;
             color: $sweety-text-color;
             align-items: center;
             display: flex;
@@ -46,7 +48,7 @@
         border-bottom-left-radius: 0;
     }
     .body {
-        overflow-y: auto;
+        // overflow-y: auto;
         padding: 0 1rem 1rem;
         display: flex;
         flex-wrap: wrap;
