--- a/src/app/sgs-components/sgs-card/sgs-card.component.scss
+++ b/src/app/sgs-components/sgs-card/sgs-card.component.scss
@@ -7,7 +7,7 @@
     border-radius: 0.5rem;
     margin: 0.25rem auto;
     cursor: pointer;
-    background-color: $sweety-divider-color;
+    background-color: #fff;
 }
 
 .card-active {
