--- a/src/app/sgs-components/sgs-drawer-layout/sgs-drawer-layout.component.html
+++ b/src/app/sgs-components/sgs-drawer-layout/sgs-drawer-layout.component.html
@@ -1,12 +1,12 @@
 <div class="drawer-container">
     <div mat-dialog-title class="header">
+        <button (click)="dialogRef.close({})" mat-icon-button aria-label="close">
+            <i class="las la-arrow-left"></i>
+        </button>
         <div class="title">
             <ng-content select="[title]"></ng-content>
             {{ data.title }}
         </div>
-        <button (click)="dialogRef.close({})" mat-icon-button aria-label="close">
-            <i class="las la-times"></i>
-        </button>
     </div>
     <mat-dialog-content class="body">
         <ng-template appContainerRef></ng-template>
